# kubecf

./: .bazelrc  .commitsar.yaml  .gitignore  .gitlab-ci.yml  .gitmodules  .http_exceptions  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  Makefile  NOTICE  README.md  WORKSPACE  bazel-bin  bazel-kubecf  bazel-out  bazel-testlogs  cf-operator-url  code-of-conduct.md  def.bzl  dependencies.yaml  go.mod  go.sum  notes  workspace_status.rb
bosh/releases/patches/: BUILD.bazel  def.bzl
bosh/releases/patches/assets/: blobstore_pre-start.sh.erb.patch
bosh/releases/patches/generator/: BUILD.bazel  main.go
bosh/releases/patches/generator/pkg/generator/: BUILD.bazel  generator.go  generator_test.go
deploy/bundle/: BUILD.bazel
deploy/containers/: BUILD.bazel
deploy/containers/credhub_setup/: .bazelrc  BUILD.bazel  WORKSPACE  auth.go  auth_test.go  credhub_info.go  def.bzl  dns.go  go.mod  go.sum  main.go  main_test.go  manifest.tmpl.yaml  repositories.bzl  secgroup.go  secgroup_test.go  workspace_status.rb
deploy/containers/credhub_setup/cc/: BUILD.bazel  doc.go  link.go  link_test.go  secgroup.go  secgroup_test.go
deploy/containers/credhub_setup/cc/testhelpers/: BUILD.bazel  mockserver.go
deploy/containers/credhub_setup/cmd/: BUILD.bazel  main.go
deploy/containers/credhub_setup/httpclient/: BUILD.bazel  client.go  client_test.go
deploy/containers/credhub_setup/pkg/cc/: BUILD.bazel  link.go  link_test.go  secgroup.go  secgroup_test.go
deploy/containers/credhub_setup/pkg/cc/testhelpers/: BUILD.bazel  mockserver.go
deploy/containers/credhub_setup/pkg/credhub/: BUILD.bazel  doc.go  link.go
deploy/containers/credhub_setup/pkg/httpclient/: BUILD.bazel  client.go  client_test.go
deploy/containers/credhub_setup/pkg/quarks/: BUILD.bazel  deployment.go  doc.go  link.go  link_test.go  mount.go  mount_test.go  resolver.go  resolver_test.go
deploy/containers/credhub_setup/pkg/quarks/testhelpers/: BUILD.bazel  fakemount.go
deploy/containers/credhub_setup/pkg/uaa/: BUILD.bazel  auth.go  auth_test.go  link.go
deploy/containers/credhub_setup/quarks/: BUILD.bazel  link.go  link_test.go  mount_test.go  resolver.go
deploy/containers/credhub_setup/quarks/testhelpers/: BUILD.bazel  fakemount.go
deploy/containers/credhub_setup/uaa/: BUILD.bazel  auth.go  auth_test.go  doc.go  link.go
deploy/helm/kubecf/: .gitignore  .helmignore  BUILD.bazel  Chart.yaml  README.md  defs.bzl  generate-minions-values.sh  job_moving.bzl  requirements.yaml  values.schema.yaml  values.yaml
deploy/helm/kubecf/assets/operations/: addons.yaml  azs.yaml  enable-traffic-to-internal-networks.yaml  releases.yaml  sequencing.yaml  set_deployment_name.yaml  set_opensuse_stemcells.yaml  set_release_urls.yaml  set_release_versions.yaml  set_sle_stemcells.yaml  sizing.yaml  stacks.yaml  stemcells.yaml
deploy/helm/kubecf/assets/operations/buildpacks/: set_suse_buidpacks_path.yaml  set_suse_buildpacks.yaml
deploy/helm/kubecf/assets/operations/instance_groups/: acceptance-tests.yaml  adapter.yaml  api.yaml  app-autoscaler.yaml  app_autoscaler.yaml  auctioneer.yaml  bits.yaml  brain-tests.yaml  cc-worker.yaml  credhub.yaml  database.yaml  diego-api.yaml  diego-cell.yaml  doppler.yaml  eirini-helm.yaml  eirini.yaml  log-api.yaml  log-cache.yaml  nats.yaml  nfs-broker-push.yaml  router.yaml  routing-api.yaml  scheduler.yaml  singleton-blobstore.yaml  sle15-stack.yaml  smoke-tests.yaml  sync-integration-tests.yaml  (+2 more)
deploy/helm/kubecf/charts/bits/: Chart.yaml  values.yaml
deploy/helm/kubecf/charts/eirini/: Chart.yaml  values.yaml
deploy/helm/kubecf/charts/eirini-extensions/: Chart.yaml  values.yaml
deploy/helm/kubecf/config/: cflinuxfs3.yaml  eirini.yaml  releases.yaml  sle15.yaml
deploy/helm/kubecf/templates/: NOTES.txt  _capi.tpl  _config.tpl  _helpers.tpl  _releases.tpl  _stacks.tpl  azs.yaml  bosh_deployment.yaml  brain-tests.yaml  cf_deployment.yaml  control-plane-services.yaml  credentials.yaml  database.yaml  database_certs.yaml  db-seeder.yaml  diego-cell-isolation-segment-services.yaml  diego-cell-isolation-segment.yaml  diego-cell-service.yaml  diego-cell.yaml  eirini.yaml  implicit_vars.yaml  ingress.yaml  minions-services.yaml  minions.yaml  ops-add-autoscaler.yaml  ops-remove-diego.yaml  ops-use-bits-service.yaml  ops-use-s3-blobstore.yaml  ops.yaml  properties.yaml  rbac.yaml  router_tls.yaml  s3-blobstore.yaml  single_availability.yaml  sizing.yaml  sync-integration-tests.yaml  uaa_autoscaler_client.yaml  use-external-blobstore.yml.yaml
deploy/helm/scf/: BUILD.bazel  Chart.yaml  values.yaml
deploy/helm/scf/assets/operations/: addons.yaml  certs.yaml  remove_roles.yaml  remove_variables.yaml  set_opensuse_stemcells.yaml  set_release_urls.yaml  set_release_versions.yaml  single_availability.yaml  zz-remove-diego-if-eirini.yaml
deploy/helm/scf/templates/: _helpers.tpl  bosh_deployment.yaml  cf_deployment.yaml  eirini.yaml  implicit_vars.yaml  ingress.yaml  ops-use-bits-service.yaml  ops.yaml  properties.yaml  registry-credentials.yaml  single_availability.yaml
dev/cf_operator/: BUILD.bazel  README.md
dev/kind/: BUILD.bazel  README.md  binary.bzl  clean.sh  def.bzl  load.sh  start.sh
dev/kube/local_path_provisioner/: BUILD.bazel
dev/kubecf/: .gitignore  BUILD.bazel  README.md  fetchImageList.sh  values.yaml
dev/kubecf/docs/: accessing.md  bosh-author.md  installing.md
dev/minikube/: BUILD.bazel  README.md  binary.bzl  def.bzl  delete.sh  load.sh  start.sh
dev/scf/: BUILD.bazel  README.md  clean.sh  start.sh  values.yaml
dev/scf/docs/: bosh-author.md  installing.md
rules/external_binary/: BUILD.bazel  def.bzl
rules/helm/: BUILD.bazel  binary.bzl  def.bzl  delete.tmpl.rb  dependencies_charts.BUILD.bazel  init.sh  package.sh  package.tmpl.rb  package.tmpl.sh  template.sh  upgrade.tmpl.rb
testing/: BUILD.bazel  README.md
testing/acceptance_tests/: BUILD.bazel  README.md
testing/brain_tests/: BUILD.bazel
testing/ccdb_key_rotation/: rotate-ccdb-keys-test.sh
testing/smoke_tests/: BUILD.bazel
testing/sync_integration_tests/: BUILD.bazel  trigger.yaml
(+677 files in other folders)
