load("@suse_rules_binaries//:def.bzl", "binary_location")
load("@workspace_status//:def.bzl", "workspace_status")
load(":def.bzl", "project")

package(default_visibility = ["//visibility:public"])

workspace_status(
    name = "workspace_status",
)

[binary_location(
    name = "{name}_binary_location".format(name = name),
    binary = "@{}//:binary".format(name),
) for name in project.external_binaries]
