load("@dependencies//:def.bzl", "binaries")
load("@external_binaries//:def.bzl", "binary_location")
load("@workspace//:def.bzl", "workspace_status")

package(default_visibility = ["//visibility:public"])

workspace_status(
    name = "workspace_status",
)

[binary_location(
    name = "{name}_binary_location".format(name = name),
    binary = "@{}//:binary".format(name),
) for name in binaries]
