load("//rules/kubecf:def.bzl", "test")

package(default_visibility = ["//visibility:public"])

test(
    name = "acceptance_tests",
    qjob_name = "acceptance-tests",
)

test(
    name = "brain_tests",
    qjob_name = "brain-tests",
)

test(
    name = "smoke_tests",
    qjob_name = "smoke-tests",
)

test(
    name = "sync_integration_tests",
    qjob_name = "sync-integration-tests",
)
