load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

copy_file(
    name = "cf_operator_chart",
    src = "@cf_operator//file",
    out = "cf-operator.tgz",
)

pkg_tar(
    visibility = ["//visibility:public"],
    name = "kubecf-bundle",
    extension = "tgz",
    srcs = [
        ":cf_operator_chart",
        "//deploy/helm/kubecf",
    ]
)
