load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")

load("@io_bazel_rules_docker//contrib:push-all.bzl", "container_push")

container_bundle(
    name = "bundle",
    images = {
        "{STABLE_DOCKER_ORG}/credhub-setup:{STABLE_CONTAINERS_CREDHUB_SETUP}": "@credhub_setup//:image",
    },
    visibility = ["//visibility:public"],
)

container_push(
    name = "push",
    bundle = ":bundle",
    format = "Docker",
)
