load(
    "//rules/helm:def.bzl",
    helm_upgrade = "upgrade",
    helm_delete = "delete",
)
load("//:def.bzl", "project")

package(default_visibility = ["//visibility:public"])

INSTALL_NAME = "cf-operator"

helm_upgrade(
    name = "apply",
    install = True,
    install_name = INSTALL_NAME,
    namespace = project.cf_operator_namespace,
    chart_package = "@cf_operator//file",
    set_values = {
        "global.singleNamespace.name": project.namespace,
    },
    values = glob(["**/*values.yaml"]),
    reset_values = True,
)

helm_delete(
    name = "delete",
    install_name = INSTALL_NAME,
    namespace = project.cf_operator_namespace,
)
