load(":def.bzl", "kind_start_binary", "kind_delete_binary")
load("//:def.bzl", "project")

package(default_visibility = ["//visibility:public"])

CLUSTER_NAME = project.deployment_name

kind_start_binary(
    name = "start",
    cluster_name = CLUSTER_NAME,
)

kind_delete_binary(
    name = "delete",
    cluster_name = CLUSTER_NAME,
)
