load(
    "//rules/helm:def.bzl",
    helm_upgrade = "upgrade",
    helm_delete = "delete",
)
load("//:def.bzl", "project")

package(default_visibility = ["//visibility:public"])

helm_upgrade(
    name = "apply",
    install = True,
    install_name = project.deployment_name,
    namespace = project.namespace,
    chart_package = "//deploy/helm/kubecf",
    values = glob(["**/*values.yaml"]),
    reuse_values = True,
)

helm_delete(
    name = "delete",
    install_name = project.deployment_name,
    namespace = project.namespace,
)
