package(default_visibility = ["//visibility:public"])

load(
    ":def.bzl",
    minikube_start_binary = "start_binary",
    minikube_delete_binary = "delete_binary",
    minikube_load_binary = "load_binary",
)

minikube_start_binary(
    name = "start",
)

minikube_delete_binary(
    name = "delete",
)

minikube_load_binary(
    name = "load",
    images = ["//deploy/containers:bundle.tar"]
)
