package(default_visibility = ["//visibility:public"])

load("//rules/helm:def.bzl", helm_template = "template")
load("//rules/kubectl:def.bzl", kubectl_apply_binary = "apply", kubectl_delete_binary = "delete")

NAMESPACE = "scf"

helm_template(
    name = "rendered_template",
    values = glob(["**/*values.yaml"]),
    install_name = "scf",
    namespace = NAMESPACE,
    chart_package = "//deploy/helm/scf:chart",
)

kubectl_apply_binary(
    name = "apply",
    resource = ":rendered_template",
    namespace = NAMESPACE,
)

kubectl_delete_binary(
    name = "delete",
    resource = ":rendered_template",
    namespace = NAMESPACE,
)
