package(default_visibility = ["//visibility:public"])

load(":def.bzl", "binary_location")

[binary_location(
    name = "{}_binary_location".format(name).replace("-", "_"),
    binary = "@{}//:binary".format(name),
) for name in [
    "docker",
    "helm",
    "jq",
    "k3s",
    "kind",
    "kubectl",
    "shellcheck",
    "yaml2json",
]]
