package(default_visibility = ["//visibility:public"])

load("@rules_gomplate//:defs.bzl", "gomplate_binary")

gomplate_binary(
    name = "package_sh",
    datasources = {
        "//:workspace_status": "workspace_status",
    },
    template = ":package.tmpl.sh",
)

exports_files([
    "template.sh",
])
