load("@rules_gomplate//:defs.bzl", "gomplate_binary")

package(default_visibility = ["//visibility:public"])

gomplate_binary(
    name = "package_tmpl_rb",
    datasources = {
        "//:workspace_status": "workspace_status",
    },
    template = ":package.tmpl.rb",
)

exports_files([
    "template.sh",
    "upgrade.tmpl.rb",
])
