# This file is used as a template for the BUILD.bazel file created in the charts/BUILD.bazel for the
# helm dependencies repository rule. It exposes the sub-charts downloaded from the `helm dep up`
# command.

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "charts",
    srcs = glob(
        ["**/*"],
        exclude = ["**/BUILD.bazel"],
    ),
)
