package(default_visibility = ["//visibility:public"])

load("//rules/kubectl:def.bzl", kubectl_patch = "patch")
load("//:def.bzl", "project")

kubectl_patch(
    name = "acceptance_tests",
    namespace = project.namespace,
    resource_type = "qjob",
    resource_name = "{deployment_name}-acceptance-tests".format(deployment_name = project.deployment_name),
    patch_type = "merge",
    patch_file = ":trigger.yaml",
)
