package(default_visibility = ["//visibility:public"])

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load(":def.bzl", "patch")

# The setup_blobstore_directories function in the BOSH pre-start should run on all instances.
patch(
    name = "fix_blobstore_pre-start_sh_erb",
    job = "blobstore",
    instance_group = "singleton-blobstore",
    target = "/var/vcap/all-releases/jobs-src/capi/blobstore/templates/pre-start.sh.erb",
    patch = ":assets/blobstore_pre-start.sh.erb.patch",
)

pkg_tar(
    name = "patches",
    package_dir = "assets/operations/patches",
    srcs = [
        ":fix_blobstore_pre-start_sh_erb",
    ],
)
