load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")
load("@rules_gomplate//:defs.bzl", "gomplate_library")
load("@workspace_status//:def.bzl", "workspace_status")

workspace_status(
    name = "workspace_status",
)

gazelle(
    name = "gazelle",
    prefix = "github.com/SUSE/kubecf/deploy/containers/credhub_setup",
)

go_library(
    name = "credhub_setup_lib",
    srcs = [
        "auth.go",
        "credhub_info.go",
        "dns.go",
        "main.go",
        "secgroup.go",
    ],
    importpath = "github.com/SUSE/kubecf/deploy/containers/credhub_setup",
    deps = [
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//clientcredentials:go_default_library",
    ],
)

go_binary(
    name = "credhub_setup",
    embed = [":credhub_setup_lib"],
    visibility = ["//visibility:private"],
)

go_image(
    name = "image",
    embed = [":credhub_setup_lib"],
    pure = "on",
    static = "on",
    goos = "linux",
    goarch = "amd64",
    visibility = ["//visibility:public"],
)

gomplate_library(
    name = "manifest",
    templates = {
        ":manifest.tmpl.yaml": "credhub_setup.yaml",
    },
    left_delim = "<<",
    right_delim = ">>",
    datasources = {
        "//:workspace_status": "workspace_status",
    },
    visibility = ["//visibility:public"],
)

go_test(
    name = "test",
    srcs = [
        "auth_test.go",
        "main_test.go",
        "secgroup_test.go",
    ],
    embed = [":credhub_setup_lib"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
