package(default_visibility = ["//visibility:public"])

load("//rules/kubectl:def.bzl", kubectl_apply_binary = "apply", kubectl_delete_binary = "delete")
load("//:def.bzl", "project")

kubectl_apply_binary(
    name = "apply",
    resource = "@local_path_provisioner//file",
)

kubectl_delete_binary(
    name = "delete",
    resource = "@local_path_provisioner//file",
)
