load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/SUSE/scf/bosh/releases/patches/generator",
    visibility = ["//visibility:private"],
    deps = ["//bosh/releases/patches/generator/pkg/generator:go_default_library"],
)

go_binary(
    name = "generator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
