load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "link.go",
        "secgroup.go",
    ],
    importpath = "credhub_setup/cc",
    visibility = ["//visibility:public"],
    deps = [
        "//httpclient:go_default_library",
        "//quarks:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "link_test.go",
        "secgroup_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
